--- a/nextjs-blog/styles/Home.module.css
+++ b/nextjs-blog/styles/Home.module.css
@@ -1,3 +1,4 @@
+
 .container {
   min-height: 100vh;
   padding: 0 0.5rem;
@@ -7,30 +8,141 @@
   align-items: center;
 }
 
-.title a {
-  color: #0070f3;
-  text-decoration: none;
+
+.background {
+  background-image: url(../public/book.png);
+  background-color: rgb(255, 253, 208, 0.3);
+  display: flex;
+  height: 30vw;
+  background-position: center; 
+  background-repeat: no-repeat; 
+  position: relative; 
+  align-items: center; 
+  flex-direction: column;
+  justify-content: center;
+  gap: 2rem;
 }
 
-.title a:hover,
-.title a:focus,
-.title a:active {
+
+.button {
+  display: flex;
+  justify-content: center;
+  border-radius: 15%;
   text-decoration: underline;
+  color: black;
+  padding: 0.3rem;
+  border: F9F7F0;
+} 
+
+.navigation {
+  display: flex;
+  gap: 1rem;
+  justify-content: space-around;
+  padding: 1rem;
+  position: sticky;
 }
 
-.title {
-  margin: 0 0 1rem;
-  line-height: 1.15;
-  font-size: 3.6rem;
+.translation {
+  display: flex;
+  flex-direction: column;
+  background-color: #F9F7F0;
+  height: 40%;
+  gap: 3rem;
+  padding: 1rem;
 }
 
-.title {
-  text-align: center;
+.services {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
 }
 
-.title,
-.description {
-  text-align: center;
+.boxes {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 1rem;
+  width: 50%;
+}
+
+.form { 
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #fff9f9;
+  gap: 2rem;
+  padding: 2rem;
+}
+
+.types {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  gap: 1 rem;
+}
+
+.footer {
+  display: flex;
+  justify-content: center;
+  padding: 1rem;
+}
+
+
+.form input,
+.form textarea {
+  display: flex;
+  border: 1px solid gray;
+  border-radius: 0.25rem;
+  padding: 0.5rem;
+  resize: none;
+}
+
+.jobs {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 2rem;
+  background-color: #fff9f9;
+  height: 40%;
+  padding: 1rem;
+}
+
+.contact {
+  background-color: #F6F3ED;
+  padding: 1rem;
+  display: flex;
+  flex-direction: row;
+  gap: 2rem;
+}
+
+
+.contactboxes {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+
+}
+
+.conversion {
+  margin: 0;
+  background-color: #F9F7F0;
+  box-sizing: border-box;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 2rem;
+  padding: 2rem;
+}
+
+.home {
+  background-color: white;
+
+}
+
+.nav {
+  display: flex;
+  flex-direction: row;
+  gap: 2rem;
 }
 
 
@@ -49,38 +161,12 @@
   margin-top: 3rem;
 }
 
-.card {
-  margin: 1rem;
-  flex-basis: 45%;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-}
 
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
-}
+@media (max-width:767px) {
+  .contact{
+    flex-direction: column;
+  }
 
-.card h3 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
-}
-
-.card p {
-  margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
-}
-
-.logo {
-  height: 1em;
 }
 
 @media (max-width: 600px) {
