--- a/nextjs-blog/styles/globals.css
+++ b/nextjs-blog/styles/globals.css
@@ -1,38 +1,98 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: Inter, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
-    Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
-
-a {
-  color: inherit;
-  text-decoration: none;
-}
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap');
 
 * {
   box-sizing: border-box;
-}
-
-img {
-  max-width: 100%;
-  height: auto;
-}
-
-h1,
-h2,
-p,
-ul {
   margin: 0;
-}
-
-ul {
   padding: 0;
-  list-style: none;
+  text-decoration: none;
+  font-family: 'Quicksand', sans-serif;
 }
 
-button {
-  padding: 0.5rem 1rem;
-  font-weight: bold;
+.container {
+  min-height: 100vh;
+  padding: 0 0.5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
+
+.button {
+  text-decoration: none;
+  border-radius: 20%;
+  color: black;
+  padding: 0.3rem;
+  background-color:  rgb(185, 176, 164);
+}
+
+.translation {
+  display: flex;
+  flex-direction: column;
+  background-color: #F9F7F0;
+}
+
+
+.types {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+.home {
+  background-color: white;
+
+}
+
+.navigation {
+  display: flex;
+  gap: 5rem;
+  border: black, 2rem;
+}
+
+.nav {
+  display: flex;
+  flex-direction: row;
+  gap: 2rem;
+}
+
+
+.description {
+  line-height: 1.5;
+  font-size: 1.5rem;
+}
+
+.grid {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
+
+  max-width: 800px;
+  margin-top: 3rem;
+}
+
+.card {
+  margin: 1rem;
+  flex-basis: 45%;
+  padding: 1.5rem;
+  text-align: left;
+  color: inherit;
+  text-decoration: none;
+  border: 1px solid #eaeaea;
+  border-radius: 10px;
+  transition: color 0.15s ease, border-color 0.15s ease;
+}
+
+.logo {
+  height: 1em;
+}
+
+@media (max-width: 600px) {
+  .grid {
+    width: 100%;
+    flex-direction: column;
+  }
+}
+
+
+
